Update player list

--- a/christmas2024.html
+++ b/christmas2024.html
@@ -69,6 +69,9 @@
                     <tr>
                         <td>Einar</td>
                     </tr>
+                    <tr>
+                        <td>Doug</td>
+                    </tr>
                 </table>
             </div>
         </div>
