--- a/christmas2024.html
+++ b/christmas2024.html
@@ -19,8 +19,7 @@
         <hr>
         <div
             style="width: 75px; height: 75px; border-radius: 50%; overflow: hidden; float:right; margin-top:-45px; margin-right:-2.5%">
-            <img alt="" style="height: 100%; width: 100%; visibility: visible;"
-                src="https://media-man2-1.cdn.whatsapp.net/v/t61.24694-24/317013708_689878412692817_966406488056907468_n.jpg?ccb=11-4&amp;oh=01_Q5AaIDr95dFyC5slN-denk6BYqlh_VnQYz7VUa2hhqaQOc7a&amp;oe=6730D284&amp;_nc_sid=5e03e0&amp;_nc_cat=106">
+            <img alt="" style="height: 100%; width: 100%; visibility: visible;" src="/images/icon.jpg"/>
         </div>
     </div>
     <div class="w3-col m4">
