Update player list

--- a/christmas2024.html
+++ b/christmas2024.html
@@ -42,12 +42,12 @@
                 <p>
                     Sunday, 8th of December <br>
                     Afternoon, 2-7PM <br>
-                    Grain and Hop Store on Reagent Street. (Upstairs)
+                    Thirsty Cambridge (46 Chesterton Road, Cambridge CB4 1EN)
                 </p>
                 <h3>Tournament information</h3>
                 <p>
                     Entry fee £5 (see registration) <br>
-                    Swiss format: 6 rounds with 5+5 time controls <br>
+                    Swiss format: 7 rounds with 5+5 time controls <br>
                     30 minute break half-way through <br>
                     Prizes for 1st, 2nd and 3rd <br>
                 </p>
@@ -70,6 +70,45 @@
                     </tr>
                     <tr>
                         <td>Doug</td>
+                    </tr>
+                    <tr>
+                        <td>Kaush</td>
+                    </tr>
+                    <tr>
+                        <td>OJR</td>
+                    </tr>
+                    <tr>
+                        <td>Joseph</td>
+                    </tr>
+                    <tr>
+                        <td>Jonny</td>
+                    </tr>
+                    <tr>
+                        <td>Ben</td>
+                    </tr>
+                    <tr>
+                        <td>Eoin</td>
+                    </tr>
+                    <tr>
+                        <td>Thomas</td>
+                    </tr>
+                    <tr>
+                        <td>Stephen</td>
+                    </tr>
+                    <tr>
+                        <td>Steve</td>
+                    </tr>
+                    <tr>
+                        <td>Sam</td>
+                    </tr>
+                    <tr>
+                        <td>Mayank</td>
+                    </tr>
+                    <tr>
+                        <td>Rohit</td>
+                    </tr>
+                    <tr>
+                        <td>Chris</td>
                     </tr>
                 </table>
             </div>
