Highlight venue change

--- a/christmas2024.html
+++ b/christmas2024.html
@@ -42,7 +42,7 @@
                 <p>
                     Sunday, 8th of December <br>
                     Afternoon, 2-7PM <br>
-                    Thirsty Cambridge (46 Chesterton Road, Cambridge CB4 1EN)
+                    <u><b class="venue">Thirsty Cambridge (46 Chesterton Road, Cambridge CB4 1EN)</b></u>
                 </p>
                 <h3>Tournament information</h3>
                 <p>
@@ -123,6 +123,9 @@
     
             .images>img {
                 margin-right: 50px;
+            }
+            .venue {
+                color: orangered
             }
     
             .icons>a {
