Added more people to tourney

--- a/christmas2024.html
+++ b/christmas2024.html
@@ -110,6 +110,18 @@
                     <tr>
                         <td>Chris</td>
                     </tr>
+                    <tr>
+                        <td>Victor</td>
+                    </tr>
+                    <tr>
+                        <td>Ivan</td>
+                    </tr>
+                    <tr>
+                        <td>Adam</td>
+                    </tr>
+                    <tr>
+                        <td>Prince</td>
+                    </tr>
                 </table>
             </div>
         </div>
