--- a/christmas2024.html
+++ b/christmas2024.html
@@ -54,8 +54,7 @@
                 <h3>Registration</h3>
                 <p>
                     Due to limited number of boards, we will have a <b>maximum of 24 people</b> in the tournament. <br>
-                    To secure your spot and help us estimate the numbers, please register by using this <a href="https://monzo.me/einarolafsson/5.00?h=WnqmNw&d=%E2%99%9F%F0%9F%8C%B2+-+Cambridge%20Casual%20Chess%20Xmas%202024">link</a>.<br>
-                    Once paid your name will be added to the registered players
+                    <i>Registration closed</i>
                 </p>
             </div>
         </div>
