--- a/about.html
+++ b/about.html
@@ -1,184 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 
-<head <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
-    <title>Cambridge Casual Chess</title>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Macondo&family=Sofia&family=Trirong&family=Mountains+of+Christmas:wght@400;700&display=swap"
+		rel="stylesheet" />
+
+	
+		<link href="./_app/immutable/assets/0.CBWaZ4Pj.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BfjkdxbQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/LgGhhnCu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/1S9PdAaG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DoaEGWfy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BOxwO84t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DHlGF2gi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BYqjy51n.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dkd9XRNs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BT-29ZOZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D3qGCupG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cka1-K5S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cy_FK13X.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cfi9JbM8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B1W0YAkH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.B1HLikZm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/YQV2PSWK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BY3p0Px-.js"><!--[--><link rel="icon" href="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='utf-8'?%3e%3c!--%20Uploaded%20to:%20SVG%20Repo,%20www.svgrepo.com,%20Generator:%20SVG%20Repo%20Mixer%20Tools%20--%3e%3csvg%20fill='%23000000'%20width='800px'%20height='800px'%20viewBox='0%200%2024%2024'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M19.189,18.757a1,1,0,0,0-.97-.757h-.933c-1.644-1.726-2.235-4.918-2.449-7H9.163c-.214,2.082-.8,5.274-2.449,7H5.781a1,1,0,0,0-.97.757L4,22H20Z'/%3e%3cpath%20d='M8,9h8a1,1,0,0,0,0-2h-.635a3.523,3.523,0,0,0,.278-1.357,3.643,3.643,0,0,0-7.286,0A3.523,3.523,0,0,0,8.635,7H8A1,1,0,0,0,8,9Z'/%3e%3c/svg%3e"/><!--]-->
 </head>
 
-<body>
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents"><!--[--><!--[--><!----><div class="p-4 bg-mauve-100"><h1 class="text-xl md:text-5xl font-trirong pl-8 pb-2 mr-6 text-headerg-100 font-bold">Cambridge Casual Chess</h1> <div class="relative flex"><hr class="flex-grow"/> <div class="w-[75px] h-[75px] rounded-full overflow-hidden absolute right-0 -translate-y-1/2"><img src="./images/icon.jpg" alt="" class="w-full h-full object-cover"/></div></div> <div class="flex flex-col md:flex-row min-h-screen mt-2"><div class="md:ml-4"><aside class="font-macondo"><nav class="grid grid-cols-2 gap-1 text-lg mr-16 md:flex md:flex-col md:text-3xl text-center md:text-left"><!--[--><a href="./" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">Home</a><a href="./news" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">News</a><a href="./contact" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">Contact</a><a href="./about" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">About</a><!--]--></nav></aside></div> <div class="mr-2 md:mr-32 mt-6 ml-2 md:ml-2"><!----><div class="flex flex-col md:flex-row items-center md:items-start"><div class="md:flex-1 font-trirong text-lg mb-6 mr-4 space-y-4"><p>We are a volunteer run club that began in 2021 with the idea to provide chess enthusiast a space to
+            play some casual games and meet like minded people.</p> <p>Our boards and equipment has been generously donated to us by members of the club, and if you wish
+            to contribute you can do so <a class="link" href="https://gofund.me/75685c96">here.</a></p> <hr/> <p>Our admin team</p> <div class="inline-grid grid-cols-5 gap-4"><!--[--><a href="https://www.chess.com/member/easy-money-sniper-7" title="easy-money-sniper-7" class="post-view-meta-avatar " data-has-user-popover="true"><img alt="easy-money-sniper-7" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/109801418.506885b4.80x80o.1dda43c742ff.png" width="80" height="80"/></a><a href="https://www.chess.com/member/passedpawn_de_nata" title="PassedPawn_de_nata" class="post-view-meta-avatar " data-has-user-popover="true"><img alt="PassedPawn_de_nata" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/127768390.4831b26e.80x80o.0cb939aa871d.jpg" width="80" height="80"/></a><a href="https://www.chess.com/member/gromulus30" title="Gromulus30" class="post-view-meta-avatar clubs-members-list-owner" data-has-user-popover="true"><img alt="Gromulus30" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/108812980.04f08d3f.80x80o.5a2eda11eac9.jpg" width="80" height="80"/></a><a href="https://www.chess.com/member/niallcm" title="Niallcm" class="post-view-meta-avatar " data-has-user-popover="true"><img alt="Niallcm" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/63732290.b5299100.80x80o.94a9145e695f.jpg" width="80" height="80"/></a><a href="https://www.chess.com/member/egorkrash" title="egorkrash" class="post-view-meta-avatar " data-has-user-popover="true"><img alt="egorkrash" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/31364180.b478d00c.80x80o.ed69a99c53ba.jpg" width="80" height="80"/></a><a href="https://www.chess.com/member/sjcambcasualchess" title="SJCambCasualChess" class="post-view-meta-avatar " data-has-user-popover="true"><img alt="SJCambCasualChess" class="post-view-meta-image rounded" src="https://images.chesscomfiles.com/uploads/v1/user/324034083.f7939af5.80x80o.967b9875cb16.png" width="80" height="80"/></a><!--]--></div></div> <img class="w-64 md:w-128 md:h-96 hidden md:block md:flex-initial" src="./images/boards.jpg" alt="chessboard"/></div><!----><!----></div></div></div><!----><!--]--> <!--[!--><!--]--><!--]-->
+			
+			<script>
+				{
+					__sveltekit_1vfzod5 = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/cambridgecasualchess"
+					};
 
-    <h1>Cambridge Casual Chess</h1>
-    <div style="align-items: right; width: 95%;">
-        <hr>
-        <div
-            style="width: 75px; height: 75px; border-radius: 50%; overflow: hidden; float:right; margin-top:-45px; margin-right:-2.5%">
-            <img alt="" style="height: 100%; width: 100%; visibility: visible;" src="/images/icon.jpg"/>
-        </div>
-    </div>
-    <div class="w3-col m4">
-        <ul class="vertical ex">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/news.html">News</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-            <li><a class="active" href="/about.html">About</a></li>
-        </ul>
-    </div>
-    <div style="margin-left:200px; width:80%;">
-        <div style="display:flex;">
-            <div style="width:80%;">
-                <p>
-                    We are a volunteer run club that began in 2021 with the idea to provide chess enthusiast a space to
-                    play some casual games and meet like minded people.
-                </p>
-                <p>
-                    Our boards and equipment has been generously donated to us by members of the club, and if you wish
-                    to contribute you can do so <a href="https://gofund.me/75685c96"> here.</a>
-                </p>
-                <hr>
-                <p>
-                    Our admin team
-                </p>
-                <div style="display:flex">
-                    <a v-user-popover="'{&quot;username&quot;:&quot;easy-money-sniper-7&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/easy-money-sniper-7" title="easy-money-sniper-7" class="post-view-meta-avatar
-                                           " style="width: 8rem; height: 8rem;" data-has-user-popover="true">
-                        <img alt="easy-money-sniper-7" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/109801418.506885b4.80x80o.1dda43c742ff.png"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/109801418.506885b4.80x80o.1dda43c742ff@2x.png 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/109801418.506885b4.80x80o.1dda43c742ff.png"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/109801418.506885b4.80x80o.1dda43c742ff@2x.png 2x" />
-                    </a>
-                    <a v-user-popover="'{&quot;username&quot;:&quot;PassedPawn_de_nata&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/passedpawn_de_nata" title="PassedPawn_de_nata" class="post-view-meta-avatar
-                                                           " style="width: 8rem; height: 8rem;"
-                        data-has-user-popover="true">
-                        <img alt="PassedPawn_de_nata" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/127768390.4831b26e.80x80o.0cb939aa871d.jpg"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/127768390.4831b26e.80x80o.0cb939aa871d@2x.jpg 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/127768390.4831b26e.80x80o.0cb939aa871d.jpg"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/127768390.4831b26e.80x80o.0cb939aa871d@2x.jpg 2x">
-                    </a>
-                    <a v-user-popover="'{&quot;username&quot;:&quot;Gromulus30&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/gromulus30" v-tooltip="Owner: Gromulus30" class="post-view-meta-avatar
-                                           clubs-members-list-owner" style="width: 8rem; height: 8rem;"
-                        data-tooltip-target="3" data-has-user-popover="true">
-                        <img alt="Gromulus30" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/108812980.04f08d3f.80x80o.5a2eda11eac9.jpg"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/108812980.04f08d3f.80x80o.5a2eda11eac9@2x.jpg 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/108812980.04f08d3f.80x80o.5a2eda11eac9.jpg"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/108812980.04f08d3f.80x80o.5a2eda11eac9@2x.jpg 2x">
-                    </a>
-                    <a v-user-popover="'{&quot;username&quot;:&quot;Niallcm&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/niallcm" title="Niallcm" class="post-view-meta-avatar
-       " style="width: 8rem; height: 8rem;" data-has-user-popover="true">
-                        <img alt="Niallcm" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/63732290.b5299100.80x80o.94a9145e695f.jpg"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/63732290.b5299100.80x80o.94a9145e695f@2x.jpg 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/63732290.b5299100.80x80o.94a9145e695f.jpg"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/63732290.b5299100.80x80o.94a9145e695f@2x.jpg 2x">
-                    </a>
-                </div>
-                <div style="display: flex;">
-                    <a v-user-popover="'{&quot;username&quot;:&quot;egorkrash&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/egorkrash" title="egorkrash" class="post-view-meta-avatar
-       " style="width: 8rem; height: 8rem;" data-has-user-popover="true">
-                        <img alt="egorkrash" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/31364180.b478d00c.80x80o.ed69a99c53ba.jpg"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/31364180.b478d00c.80x80o.ed69a99c53ba@2x.jpg 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/31364180.b478d00c.80x80o.ed69a99c53ba.jpg"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/31364180.b478d00c.80x80o.ed69a99c53ba@2x.jpg 2x">
-                    </a>
-                    <a v-user-popover="'{&quot;username&quot;:&quot;SJCambCasualChess&quot;,&quot;location&quot;:&quot;clubs_members&quot;}'"
-                        href="https://www.chess.com/member/sjcambcasualchess" title="SJCambCasualChess" class="post-view-meta-avatar
-       " style="width: 8rem; height: 8rem;" data-has-user-popover="true">
-                        <img alt="SJCambCasualChess" class="post-view-meta-image"
-                            data-src="https://images.chesscomfiles.com/uploads/v1/user/324034083.f7939af5.80x80o.967b9875cb16.png"
-                            data-srcset="https://images.chesscomfiles.com/uploads/v1/user/324034083.f7939af5.80x80o.967b9875cb16@2x.png 2x"
-                            height="80"
-                            src="https://images.chesscomfiles.com/uploads/v1/user/324034083.f7939af5.80x80o.967b9875cb16.png"
-                            width="80"
-                            srcset="https://images.chesscomfiles.com/uploads/v1/user/324034083.f7939af5.80x80o.967b9875cb16@2x.png 2x">
-                    </a>
-                </div>
-            </div>
-            <div style="align-items: center; margin: 19.2px;">
-                <img src="/images/boards.jpg" width="500" height="400" />
-            </div>
-        </div>
-    </div>
+					const element = document.currentScript.parentElement;
 
+					Promise.all([
+						import("./_app/immutable/entry/start.BfjkdxbQ.js"),
+						import("./_app/immutable/entry/app.Dkd9XRNs.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element, {
+							node_ids: [0, 3],
+							data: [null,null],
+							form: null,
+							error: null
+						});
+					});
+				}
+			</script>
+		</div>
 </body>
 
 </html>
-<style>
-    body {
-        background-color: rgb(247, 247, 237);
-    }
-
-    .images>img {
-        margin-right: 50px;
-    }
-
-    .icons>a {
-        margin-right: 10px;
-    }
-
-    p {
-        font-size: 1.2em;
-        font-family: "Trirong", serif;
-    }
-
-    h1 {
-        margin-bottom: -15px;
-        font-family: "Trirong", serif;
-        margin-left: 50px;
-        font-size: 3em;
-        font-weight: 900;
-        color: rgb(112, 117, 36);
-    }
-
-    ul {
-        font-family: "Macondo", cursive;
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 120px;
-        font-size: 2em;
-        height: 100%;
-        position: fixed;
-        overflow: auto;
-    }
-
-    li a {
-        display: block;
-        color: #000;
-        padding: 8px 16px;
-        text-decoration: none;
-    }
-
-    li a.active {
-        color: rgb(211, 98, 98);
-    }
-
-    li a:hover:not(.active) {
-        background-color: #555;
-        color: white;
-    }
-
-    .post-view-meta-image {
-        border-radius: 5px;
-    }
-</style>
