--- a/index.html
+++ b/index.html
@@ -1,114 +1,67 @@
-<!DOCTYPE html>
- <head
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
-<title>Cambridge Casual Chess</title>
+<!doctype html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Macondo&family=Sofia&family=Trirong&family=Mountains+of+Christmas:wght@400;700&display=swap"
+		rel="stylesheet" />
+
+	
+		<link href="./_app/immutable/assets/0.CBWaZ4Pj.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BfjkdxbQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/LgGhhnCu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/1S9PdAaG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DoaEGWfy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BOxwO84t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DHlGF2gi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BYqjy51n.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dkd9XRNs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BT-29ZOZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D3qGCupG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cka1-K5S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cy_FK13X.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cfi9JbM8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B1W0YAkH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.B-OO8Uqq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/YQV2PSWK.js"><!--[--><link rel="icon" href="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='utf-8'?%3e%3c!--%20Uploaded%20to:%20SVG%20Repo,%20www.svgrepo.com,%20Generator:%20SVG%20Repo%20Mixer%20Tools%20--%3e%3csvg%20fill='%23000000'%20width='800px'%20height='800px'%20viewBox='0%200%2024%2024'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M19.189,18.757a1,1,0,0,0-.97-.757h-.933c-1.644-1.726-2.235-4.918-2.449-7H9.163c-.214,2.082-.8,5.274-2.449,7H5.781a1,1,0,0,0-.97.757L4,22H20Z'/%3e%3cpath%20d='M8,9h8a1,1,0,0,0,0-2h-.635a3.523,3.523,0,0,0,.278-1.357,3.643,3.643,0,0,0-7.286,0A3.523,3.523,0,0,0,8.635,7H8A1,1,0,0,0,8,9Z'/%3e%3c/svg%3e"/><!--]-->
 </head>
-<body>
 
-<h1>Cambridge Casual Chess</h1>
-<div style="align-items: right; width: 95%;">
-<hr>
-<div style="width: 75px; height: 75px; border-radius: 50%; overflow: hidden; float:right; margin-top:-45px; margin-right:-2.5%">
-    <img alt="" style="height: 100%; width: 100%; visibility: visible;" src="/images/icon.jpg"/>
-</div> 
-</div>
-<div class="w3-col m4">
-<ul class="vertical ex">
-  <li><a class="active" href="/index.html">Home</a></li>
-  <li><a href="/news.html">News</a></li>
-  <li><a href="/contact.html">Contact</a></li>
-  <li><a href="/about.html">About</a></li>
-</ul>
-</div>
-<div style="margin-left:200px; width:80%;">
-<div style="display:flex;">
-  <div style="width:80%;">
-    <p>
-      At Cambridge Casual Chess club, we aim to provide a place for people to play over the board chess in a social/casual setting.
-      We welcome all levels, and you'll typically find players with ratings ranging from 600 upto around 2000.
-      So whether you're a beginner or a seasoned player you're guarenteed to find a good game.
-    </p>
-    <p>
-      You'll find us every <b>Tuesday from 7:00 PM to 10:30 PM at the Grain and Hop Store</b> on Reagent Street.<br>
-      We hope to see you there for an evening of friendly competition and camraderie.
-    </p>
-    <div style="margin-top:50px;">
-      <hr>
-    <div style="display:flex; margin-top:20px;" class="icons">
-  <a href="https://www.chess.com/club/cambridge-casual-chess/join"><img width="100" height="100" src="https://img.icons8.com/?size=256&id=C5LTcmsc3cr0&format=png"/></a>
-  <a href="https://www.eventbrite.co.uk/e/cambridge-casual-chess-tickets-510952622047?aff=ebdssbdestsearch&keep_tld=1"><img width="100" height="100" src="https://s3-eu-west-1.amazonaws.com/tpd/logos/4bde3b280000640005068d7d/0x0.png"/></a>
-  <a href="https://www.instagram.com/cambridgecasualchess?igsh=NWJ2cWttNnk4a3Bj"><img width="100" height="100" src="https://img.icons8.com/?size=256&id=Xy10Jcu1L2Su&format=png"/></a>
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents"><!--[--><!--[--><!----><div class="p-4 bg-mauve-100"><h1 class="text-xl md:text-5xl font-trirong pl-8 pb-2 mr-6 text-headerg-100 font-bold">Cambridge Casual Chess</h1> <div class="relative flex"><hr class="flex-grow"/> <div class="w-[75px] h-[75px] rounded-full overflow-hidden absolute right-0 -translate-y-1/2"><img src="./images/icon.jpg" alt="" class="w-full h-full object-cover"/></div></div> <div class="flex flex-col md:flex-row min-h-screen mt-2"><div class="md:ml-4"><aside class="font-macondo"><nav class="grid grid-cols-2 gap-1 text-lg mr-16 md:flex md:flex-col md:text-3xl text-center md:text-left"><!--[--><a href="./" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">Home</a><a href="./news" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">News</a><a href="./contact" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">Contact</a><a href="./about" class="transition-colors duration-200 p-2 font-bold
+			  hover:bg-stone-500 hover:text-white">About</a><!--]--></nav></aside></div> <div class="mr-2 md:mr-32 mt-6 ml-2 md:ml-2"><!----><div class="flex flex-col gap-4 md:flex-row items-center md:items-start"><div class="md:flex-1"><div class="font-trirong text-lg mb-6 mr-4 space-y-4"><p>At Cambridge Casual Chess club, we aim to provide a place for people to play over the board chess in a social/casual setting.
+            We welcome all levels, and you'll typically find players with ratings ranging from 600 upto around 2000.
+            So whether you're a beginner or a seasoned player you're guarenteed to find a good game.</p> <p>You'll find us every <span class="font-bold">Tuesday from 7:00 PM to 10:30 PM at the Grain and Hop Store</span> on Reagent Street.</p> <p>We hope to see you there for an evening of friendly competition and camraderie.</p></div> <div><hr class="mr-4 mb-6"/> <div class="flex flex-row"><a href="https://www.chess.com/club/cambridge-casual-chess/join"><img width="100" height="100" src="https://img.icons8.com/?size=256&amp;id=C5LTcmsc3cr0&amp;format=png"/></a> <a href="https://www.eventbrite.co.uk/e/cambridge-casual-chess-tickets-510952622047?aff=ebdssbdestsearch&amp;keep_tld=1"><img width="100" height="100" src="https://s3-eu-west-1.amazonaws.com/tpd/logos/4bde3b280000640005068d7d/0x0.png"/></a> <a href="https://www.instagram.com/cambridgecasualchess?igsh=NWJ2cWttNnk4a3Bj"><img width="100" height="100" src="https://img.icons8.com/?size=256&amp;id=Xy10Jcu1L2Su&amp;format=png"/></a></div></div></div> <iframe title="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2445.3536565776285!2d0.12374717759830538!3d52.20062037197927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8709a1fe6e3f3%3A0x832cbb8d8e938420!2sThe%20Grain%20%26%20Hop%20Store!5e0!3m2!1sen!2suk!4v1730499741953!5m2!1sen!2suk" allowfullscreen="" class="w-full md:h-96 md:flex-1 rounded-lg" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div><!----><!----></div></div></div><!----><!--]--> <!--[!--><!--]--><!--]-->
+			
+			<script>
+				{
+					__sveltekit_1vfzod5 = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/cambridgecasualchess"
+					};
 
-    </div></div>
-   </div>
-   <div style="align-items: center; margin: 19.2px;">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2445.3536565776285!2d0.12374717759830538!3d52.20062037197927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8709a1fe6e3f3%3A0x832cbb8d8e938420!2sThe%20Grain%20%26%20Hop%20Store!5e0!3m2!1sen!2suk!4v1730499741953!5m2!1sen!2suk" width="500" height="400" style="border:0; border-radius: 15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-</div>
-<div style="display:flex; margin-top:30px;" class="images">
-  <img width="400" height="400" src="/images/view.jpg"/>
-  <img width="400" height="400" src="/images/banner.jpg"/>
-</div>
-</div>
+					const element = document.currentScript.parentElement;
 
+					Promise.all([
+						import("./_app/immutable/entry/start.BfjkdxbQ.js"),
+						import("./_app/immutable/entry/app.Dkd9XRNs.js")
+					]).then(([kit, app]) => {
+						kit.start(app, element, {
+							node_ids: [0, 2],
+							data: [null,null],
+							form: null,
+							error: null
+						});
+					});
+				}
+			</script>
+		</div>
 </body>
+
 </html>
-<style>
-body {
-    background-color: rgb(247, 247, 237);
-}
-
-.images > img {
-  margin-right: 50px;
-}
-
-.icons > a {
-  margin-right: 10px;
-}
-
-p {
-  font-size: 1.2em;
-  font-family: "Trirong", serif;
-}
-
-h1 {
-    margin-bottom: -15px;
-    font-family: "Trirong", serif;
-    margin-left: 50px;
-    font-size: 3em;
-    font-weight: 900;
-    color:rgb(112, 117, 36);
-}
-
-ul {
-  font-family: "Macondo", cursive;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 120px;
-  font-size: 2em;
-  height: 100%;
-  position: fixed;
-  overflow: auto;
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-li a.active {
-  color: rgb(211, 98, 98);
-}
-
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
-}
-</style>
